[package]
name = "stripe-cf-worker-backend"
version = "0.1.0"
edition = "2021"
authors = [ "romanornr <romanornr@gmail.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.5.0"
worker-macros = "0.5.0"
console_error_panic_hook = "0.1.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serde_urlencoded = "0.7.1"
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
futures = "0.3.28"